try to fix overflow issue

--- a/src/components/Templates/Music/common/Footer/MusicFooter.css
+++ b/src/components/Templates/Music/common/Footer/MusicFooter.css
@@ -6,6 +6,7 @@
   font-family: "Futura";
   color: #fff;
   /* border-top: 1px solid white; */
+  overflow-x: hidden;
 }
 
 .musicFooter_container {
